adjust image size to 640x480, wrap text, fix image redraw issue, add example logo

--- a/photo_upload/media/css/style.less
+++ b/photo_upload/media/css/style.less
@@ -1,8 +1,8 @@
 /*Mixins*/
 
 .camera-box() {
-	width: 350px;
-	height:260px;
+	//width: 350px;
+	//height:260px;
 	border:15px solid #333;
 	background:#eee;
 	-webkit-border-radius: 20px;
@@ -28,7 +28,7 @@
 	position: fixed;
 	z-index: 1;
 	top:0px;
-	right: -607px;
+	right: -850px;
 }
 
 .clearfix() {
@@ -54,7 +54,7 @@ body {
 		#sticky {
 			.sticky();
 			.transition(right, 500ms);
-			width:682px;
+			width:932px;
 			height:280px;
 		
 			aside#tab {
@@ -85,13 +85,13 @@ body {
 				float:left;
 				background:#FFF;
 				box-shadow: inset 0 0 2px #000;
-				width:600px;
+				width:850px;
 				
 				#step-1 {
 					display:block;
 						
 					.left-section {
-						width:32%;
+						width:131px;
 						float:left;
 						margin-left:10px;
 						margin-top:50px;
@@ -114,7 +114,7 @@ body {
 						}
 					}
 					.right-section {
-						width:64%;
+						width:669px;
 						padding:1%;
 						float:right;
 							
@@ -127,7 +127,7 @@ body {
 					display:none;
 						
 					.left-section {
-						width:34%;
+						width:131px;
 						float:left;
 						position:relative;
 						left:20px;
@@ -142,7 +142,7 @@ body {
 							}
 							textarea {
 								width:80%;
-								height:30px;
+								height:75px;
 							}
 							label {
 								display:block;
@@ -153,7 +153,7 @@ body {
 						}
 					}
 					.right-section {
-						width:64%;
+						width:669px;
 						padding:1%;
 						float:right;
 							
